--- a/index.html
+++ b/index.html
@@ -371,10 +371,12 @@
 </section>
 <section id="좀-더-욕심을-내보자면" class="slide level2">
 <h2>좀 더 욕심을 내보자면…</h2>
+<div>
 <ul>
-<li class="fragment">Github 위에 블로그 만들기</li>
-<li class="fragment">코드가 가미된 Markdown 문서 만들어보기</li>
+<li>Github 위에 블로그 만들기</li>
+<li>코드가 가미된 Markdown 문서 만들어보기</li>
 </ul>
+</div>
 </section>
 <section id="좀-더-욕심을-내보자면-1" class="slide level2" data-background-color="black" data-background-image="https://image.edaily.co.kr/images/photo/files/NP/S/2020/10/PS20101900203.jpg" data-background-size="cover" data-background-repeat="none" data-background-opacity="0.3" data-transition="none" data-background-transition="zoom" data-transition-speed="slow">
 <h2>좀 더 욕심을 내보자면…</h2>
@@ -426,26 +428,33 @@
 </div>
 </div>
 </section>
-<section id="git이란" class="slide level2 center" data-background-color="black" data-background-image="https://git-scm.com/images/logos/downloads/Git-Logo-White.png" data-background-size="cover" data-background-repeat="center" data-background-opacity="0.5">
+<section id="git이란" class="slide level2 center" data-background-color="black" data-background-image="https://git-scm.com/images/logos/downloads/Git-Logo-White.png" data-background-size="cover" data-background-repeat="center" data-background-opacity="0.2">
 <h2>Git이란</h2>
+<div>
 <ul>
-<li class="fragment">한마디로 말하면 VCS이다.</li>
-<li class="fragment">누가 무엇을 언제 바꾸었는지를 일목요연하게 기록한다.</li>
-<li class="fragment">필요한 시점으로 언제든 돌아갈 수 있다.</li>
+<li>한마디로 말하면 VCS이다.
+<ul>
+<li>Version Control System</li>
+</ul></li>
+<li>누가 무엇을 언제 바꾸었는지를 일목요연하게 기록한다.</li>
+<li>필요한 시점으로 언제든 돌아갈 수 있다.</li>
 </ul>
+</div>
 </section>
 <section id="잠깐" class="slide level2">
 <h2>잠깐!</h2>
 <div>
 <ul>
-<li>우리는 지금 git을 본격적으로 배우는 것이 아니다!</li>
-<li>따라서 앞으로 1인 사용자만을 가정한다.</li>
-<li>1인일 때도 효과적인가?
+<li>우리는 지금 git을 본격적으로 배우는 것이 아니다!
 <ul>
-<li>나는 내가 어제 뭐했는지도 정확하게 기억하지 못한다.</li>
+<li>따라서 앞으로 1인 사용자만을 가정한다.</li>
+</ul></li>
+<li>1인일 때도 쓸모가 있을까?
+<ul>
+<li>나는 어제 뭐했는지도 정확하게 기억하지 못한다…</li>
 <li>git을 쓰면 나의 이런 멍청함이 보완된다!</li>
 </ul></li>
-<li>웹하드와 유사하기도?
+<li>웹하드와 유사한 것일까?
 <ul>
 <li>단 일반적인 용도의 웹하드와 다르다!</li>
 <li>코드/문서를 관리하고 정리하는 용도</li>
@@ -478,10 +487,12 @@
 </section>
 <section id="연습-준비물" class="slide level2">
 <h2>연습: 준비물</h2>
+<div>
 <ul>
-<li class="fragment">Git (for Windows)</li>
-<li class="fragment">Github Desktop (계정 만들어 둘 것)</li>
+<li>Git (for Windows)</li>
+<li>Github Desktop (계정 만들어 둘 것)</li>
 </ul>
+</div>
 </section>
 <section id="git-폴더-만들기" class="slide level2">
 <h2>Git 폴더 만들기</h2>
@@ -507,11 +518,11 @@
 <h2>Add &amp; Commit 이해하기</h2>
 <div>
 <ul>
-<li>Add는 커밋할 상태로 파일을 올려두는 것을 의미합니다.</li>
-<li>Commit은 (임시) 저장이라고 이해하면 편합니다.</li>
-<li>Commit을 해두면 그 이전 상태로 언제든지 돌아갈 수 있습니다.
+<li><code>Add</code>는 커밋할 상태로 파일을 올려두는 것을 의미합니다.</li>
+<li><code>Commit</code>은 (임시) 저장이라고 이해하면 편합니다.</li>
+<li><code>Commit</code>을 해두면 그 이전 상태로 언제든지 돌아갈 수 있습니다.
 <ul>
-<li>단, Desktop 앱을 통해서는 아닙니다…</li>
+<li>단, Github Desktop 앱을 통해서는 아닙니다…</li>
 <li>터미널 혹은 <a href="https://www.sourcetreeapp.com">SourceTree</a>를 쓰면 자유롭게 활용할 수 있습니다.</li>
 </ul></li>
 </ul>
@@ -526,6 +537,10 @@
 <li><a href="https://opentutorials.org/course/2708" class="uri">https://opentutorials.org/course/2708</a></li>
 </ul>
 </div>
+</section>
+<section id="branch" class="slide level2">
+<h2>Branch</h2>
+<p><img data-src="./images/branch-example.png" class="absolute" style="background:#FFFFFF;top: 100px; left: 100px; width: 800px; height: 550px; "></p>
 </section>
 <section id="git과-github의-역할" class="slide level2">
 <h2>Git과 Github의 역할</h2>
@@ -548,7 +563,7 @@
 <ul>
 <li>작업한 내용을 온라인을 통해 동기화
 <ul>
-<li>원격저장소</li>
+<li>원격 저장소</li>
 </ul></li>
 <li>서로 다른 기기로 작업할 때 유용
 <ul>
@@ -561,7 +576,7 @@
 </ul>
 </div>
 </section>
-<section id="section-1" class="slide level2" data-background-color="black" data-background-image="./images/Git-PUSH-pULL-1280x640.png" data-background-size="cover" data-background-repeat="none" data-background-opacity="1" data-transition="none" data-background-transition="zoom" data-transition-speed="slow">
+<section id="section-1" class="slide level2" data-background-color="black" data-background-image="./images/Git-PUSH-pULL-1280x640.png" data-background-size="contain" data-background-repeat="none" data-background-opacity="1" data-transition="none" data-background-transition="zoom" data-transition-speed="slow">
 <h2></h2>
 </section>
 <section id="other-things" class="slide level2">
@@ -573,6 +588,9 @@
 <li>Github Copilot <br> <span class="math inline">\(\vdots\)</span></li>
 </ul>
 </div>
+</section>
+<section id="section-2" class="slide level2" data-background-color="black" data-background-image="./images/git_procedure_V2.png" data-background-size="contain" data-background-repeat="none" data-background-opacity="1" data-transition="none" data-background-transition="zoom" data-transition-speed="slow">
+<h2></h2>
 </section></section>
 <section>
 <section id="markdown" class="title-slide slide level1 center">
@@ -650,7 +668,7 @@
 </ul>
 </div>
 </section>
-<section id="section-2" class="slide level2 center" data-background-color="white" data-background-image="./images/github-pages-workflow.png" data-background-size="cover" data-background-repeat="center" data-background-opacity="1">
+<section id="section-3" class="slide level2 center" data-background-color="white" data-background-image="./images/github-pages-workflow.png" data-background-size="contain" data-background-repeat="center" data-background-opacity="1">
 <h2></h2>
 </section>
 <section id="무엇을-할-수-있나" class="slide level2">
@@ -666,20 +684,22 @@
 </section>
 <section id="연습-준비물-2" class="slide level2">
 <h2>연습: 준비물</h2>
+<div>
 <ul>
-<li class="fragment">Quarto</li>
-<li class="fragment">VS Code -Quarto Extension</li>
+<li>Quarto</li>
+<li>VS Code -Quarto Extension</li>
 </ul>
-</section>
-<section id="git-폴더-만들기-1" class="slide level2">
-<h2>Git 폴더 만들기</h2>
-<ul>
-<li class="fragment">Github Pages를 활용할 예정이기 때문에 Github Desktop 앱으로 만들자.</li>
-</ul>
+</div>
 </section>
 <section id="step-by-step" class="slide level2">
 <h2>Step by Step</h2>
+<div>
+<ul>
+<li>Github Pages를 활용할 예정</li>
+<li>Github Desktop 앱으로 적당한 Git 폴더 생성</li>
+</ul>
 <p><a href="https://quarto.org/docs/websites/website-blog.html" class="uri">https://quarto.org/docs/websites/website-blog.html</a></p>
+</div>
 <div class="footer footer-default">
 <p>KNU Summer Special Tutorial</p>
 </div>
