--- a/index.html
+++ b/index.html
@@ -616,15 +616,15 @@
 <ul>
 <li>Github Pages
 <ul>
-<li>Static Web Hosting</li>
+<li>정적 웹 호스팅 서비스</li>
 </ul></li>
 <li>Github Actions
 <ul>
-<li>Automation service</li>
+<li>자동화 서비스</li>
 </ul></li>
 <li>Github Copilot
 <ul>
-<li>Code completion assisted by AI(GPT-3) <br> <span class="math inline">\(\vdots\)</span></li>
+<li>AI(GPT-3) 기반 코드 작성 보고 <br> <span class="math inline">\(\vdots\)</span></li>
 </ul></li>
 </ul>
 </div>
