--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
 <h2>연습: 준비물</h2>
 <div>
 <ul>
-<li>Git (for Windows)</li>
-<li>Github Desktop (계정 만들어 두셨쥬?)</li>
+<li><code>Git</code> (for Windows)</li>
+<li><code>Github Desktop</code> (계정 만들어 두셨쥬?)</li>
 </ul>
 </div>
 </section>
