--- a/index.html
+++ b/index.html
@@ -629,10 +629,7 @@
 </ul>
 </div>
 </section>
-<section id="section-2" class="slide level2" data-background-color="black" data-background-image="./images/Git-PUSH-pULL-1280x640.png" data-background-size="contain" data-background-repeat="none" data-background-opacity="1" data-transition="none" data-background-transition="zoom" data-transition-speed="slow">
-<h2></h2>
-</section>
-<section id="section-3" class="slide level2" data-background-color="black" data-background-image="./images/git_procedure_V2.png" data-background-size="cover" data-background-repeat="none" data-background-opacity="1" data-transition="none" data-background-transition="zoom" data-transition-speed="slow">
+<section id="section-2" class="slide level2" data-background-color="black" data-background-image="https://4.bp.blogspot.com/-CHhUJAH_ZxU/Wg6xzplcR7I/AAAAAAAAABQ/lNcOF66zpVAyp9mmJbZp3wiCuibD-dt6ACEwYBhgL/s640/git_procedure_v2.png" data-background-size="cover" data-background-repeat="none" data-background-opacity="1" data-transition="none" data-background-transition="zoom" data-transition-speed="slow">
 <h2></h2>
 </section></section>
 <section>
@@ -757,7 +754,7 @@
 </div>
 </div>
 </section>
-<section id="section-4" class="slide level2 center" data-background-color="white" data-background-image="./images/github-pages-workflow.png" data-background-size="contain" data-background-repeat="center" data-background-opacity="1">
+<section id="section-3" class="slide level2 center" data-background-color="white" data-background-image="./images/github-pages-workflow.png" data-background-size="contain" data-background-repeat="center" data-background-opacity="1">
 <h2></h2>
 </section>
 <section id="무엇을-할-수-있나" class="slide level2">
