--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 </section>
 <section id="두려워-마세요" class="slide level2 center" data-background-color="black" data-background-image="https://c.tenor.com/_Vjz-KB-sj4AAAAC/lego-panic.gif" data-background-size="contain" data-background-repeat="center" data-background-opacity="0.3">
 <h2>두려워 마세요!</h2>
-<p>“그냥 파일 시스템일 뿐입니다. 복붙에서 저장해 두면 되요.”</p>
+<p>“그냥 파일 시스템일 뿐입니다. 복붙해서 저장해 두면 되요.”</p>
 </section>
 <section id="깃-더-배우기" class="slide level2">
 <h2>깃 (더) 배우기</h2>
