--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@
 </ul>
 </div>
 </section>
-<section id="목적과-동기의-호응" class="slide level2 center" data-background-color="black" data-background-image="https://25.media.tumblr.com/fc175d258e3109a3fa0a038ef4e577a4/tumblr_mj8tdt5Qxn1rmhlw7o1_r1_500.gif" data-background-size="cover" data-background-repeat="center" data-background-opacity="0.5">
+<section id="목적과-동기의-호응" class="slide level2 center" data-background-color="black" data-background-image="https://i.gifer.com/4APT.gif" data-background-size="cover" data-background-repeat="center" data-background-opacity="0.3">
 <h2>목적과 동기의 호응</h2>
-<p>“서로 뭘 하는지 목적을 맞춰야 뭐 하나라도 건질 수 있겠죠?”</p>
+<p>“서로 뭘 하려는지 목적을 맞춰야 뭐 라도 건질 수 있겠죠?”</p>
 </section>
 <section id="오늘-튜토리얼을-하는-이유" class="slide level2">
 <h2>오늘 튜토리얼을 하는 이유</h2>
