--- a/index.html
+++ b/index.html
@@ -743,11 +743,10 @@
 <ul>
 <li>단점
 <ul>
-<li>WYSIWYM을 활용할 수 있다.<br>
-</li>
+<li>어쨌든 WYSIWYM은 아니다.</li>
 <li>진입 장벽</li>
 <li>디자인 요소가 부족하다.</li>
-<li>전달/전파가 용이하다.</li>
+<li>전달/전파에 품이 든다.</li>
 </ul></li>
 </ul>
 </div>
