--- a/index.html
+++ b/index.html
@@ -685,11 +685,11 @@
 <h2>연습: 준비물</h2>
 <div>
 <ul>
-<li>VS Code
+<li><code>VS Code</code>
 <ul>
 <li>“Makrdown All in One” 확장 설치</li>
 </ul></li>
-<li><a href="https://stackedit.io/app#" class="uri">https://stackedit.io/app#</a></li>
+<li><code>StackEdit</code> <a href="https://stackedit.io/app#" class="uri">https://stackedit.io/app#</a></li>
 </ul>
 </div>
 </section></section>
