--- a/index.html
+++ b/index.html
@@ -520,9 +520,12 @@
 <h2>Git 폴더 만들기</h2>
 <div>
 <ul>
-<li><p>Git 폴더를 만드는 방법은 세 가지가 있습니다.</p>
+<li><p>Git 폴더를 만드는 방법은 두 가지가 있습니다.</p>
 <ol type="1">
-<li>애초부터 Git 폴더로 생성하기</li>
+<li>애초부터 Git 폴더로 생성하기
+<ul>
+<li>Github Desktop 앱을 이용하거나 혹은 터미널을 쓰거나</li>
+</ul></li>
 <li>Github에서 Clone 해오기</li>
 </ol></li>
 </ul>
