--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
 </ul></li>
 <li>Github Copilot
 <ul>
-<li>AI(GPT-3) 기반 코드 작성 보고 <br> <span class="math inline">\(\vdots\)</span></li>
+<li>AI(GPT-3) 기반 코드 작성 보조 서비스 <br> <span class="math inline">\(\vdots\)</span></li>
 </ul></li>
 </ul>
 </div>
